# unifrac_bp

./: ASV_dist.txt  Cargo.toml  GWMC.txt  LICENSE-MIT  README.md
data/: ASV_counts.txt  ASVs_counts.biom  ASVs_truth.txt  ASVsweighted_normalized_truth.tsv  GWMC_16S_otutab_small2.biom  GWMC_16S_otutab_small2.txt  GWMC_rep_seqs_all.tre  converted_table.biom  test_OTU_table.txt  test_OTU_table_new.txt  test_truth.txt  test_truth_weighted.txt  try.txt
src/: main.rs  stripe_cu.rs
