[package]
name = "unifrac"
version = "0.1.0"
edition = "2021"


[[bin]]

name = "unifrac-bp"
path = "src/main.rs"

[dependencies]
anyhow   = "1"
clap     = { version = "4.3", features = ["derive"] }
env_logger = "0.11"
rayon    = "1.10"
newick   = "0.11"
bitvec   = "1.0"
succ     = { git = "https://github.com/jianshu93/succ.git" }  
log = { version = "0.4" }
