[package]
name = "unifrac"
version = "0.1.0"
edition = "2021"


[[bin]]

name = "unifrac-rs"
path = "src/main.rs"

[dependencies]
anyhow   = "1"
clap     = { version = "4.3", features = ["derive"] }
env_logger = "0.11"
rayon    = "1.10"
newick   = "0.11"
bitvec   = "1.0"
succparen = "0.0.2"
log = { version = "0.4" }
num_cpus = "1"
hdf5 = { version = "0.8"}
ryu = "1.0"


