[package]
name = "unifrac_rs"
version = "0.2.2"
authors = ["jianshuzhao@yahoo.com"]
repository = "https://github.com/jianshu93/unifrac_bp.git"
keywords = ["unifrac", "phylogenetic", "bacteria", "succint"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Striped UniFrac for comparing microbiomes using optimal balanced parenthesis"

[[bin]]

name = "unifrac"
path = "src/main.rs"

[dependencies]
anyhow  = "1"
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.11"
rayon = "1.10"
newick = "0.11"
bitvec = "1.0"
succparen = "0.0.2"
log = { version = "0.4" }
num_cpus = "1"
hdf5 = { package = "hdf5-metno", version = "0.10", features = ["static", "zlib"] }
ryu = "1.0"


[features]
default = []

stdsimd = []